--- a/android/local.properties
+++ b/android/local.properties
@@ -1,1 +1,2 @@
-flutter.sdk=C:\\flutter
+flutter.sdk=C:\\Users\\Travail\\Documents\\flutter
+sdk.dir=C:\\Users\\Travail\\AppData\\Local\\Android\\sdk
