--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-flutter.sdk=C:\\Users\\Travail\\Documents\\flutter
+flutter.sdk=D:\\tools\\flutter
 sdk.dir=C:\\Users\\Travail\\AppData\\Local\\Android\\sdk
